# Omni_Bot_Pi

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
micro_ros_pi/: CMakeLists.txt  pico_control.cpp
micro_ros_pi/motor/: CMakeLists.txt
micro_ros_pi_/motor/include/: motor.h
micro_ros_pi_/motor/src/: motor.c
micro_ros_pi_/pico_quadrature_encoder/include/: QuadratureEncoder.hpp
micro_ros_pi_/pico_quadrature_encoder/src/: CMakeLists.txt  QuadratureEncoder.cpp
micro_ros_pi_/pid_controller/: CMakeLists.txt
micro_ros_pi_/pid_controller/include/: pid.h
micro_ros_pi_/pid_controller/src/: pid.c
ros_ws/src/controller_listener/: package.xml  setup.cfg  setup.py
ros_ws/src/controller_listener/controller_listener/: controller_command.py
